Update of MNIST examples (inlcuding tensorboard usage)

--- a/SimpleNN_01/Example_01.ipynb
+++ b/SimpleNN_01/Example_01.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9194\n"
+      "0.9226\n"
      ]
     }
    ],
@@ -286,7 +286,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Linki\n",
+    "# 1: https://www.tensorflow.org/versions/r0.12/tutorials/mnist/tf/\n",
+    "# 2: https://www.tensorflow.org/versions/r0.12/how_tos/summaries_and_tensorboard/#serializing_the_data\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
