--- a/MNIST_TF_01/MNIST_TF_01.ipynb
+++ b/MNIST_TF_01/MNIST_TF_01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The purpose of this note is to show how to setup and start using Tensorboard that helps you to invesitagte you neural network build with Tensorflow"
+    "#### The purpose of this note is to show how to setup and start using Tensorboard that helps you to invesitagte your neural network built with Tensorflow"
    ]
   },
   {
@@ -26,14 +26,14 @@
     "1. I have edited \"tensorboard\" file located in /home/damian/anaconda3/envs/TensorFlow_gym/bin virtual environment directory according to sugestion [found here](https://github.com/tensorflow/tensorflow/issues/1790) (replacing the way tensorbard is imported and one more line)\n",
     "2. I had to install additional package werkzeug using command: conda install werkzeug\n",
     "\n",
-    "After all the above steps I can replicate the example for the official introduction video\n"
+    "Now I can replicate the example for the official introduction video\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -231,32 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-9390d633ecfa>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-9390d633ecfa>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    tensorboard --logdir=/home/damian/GitRepositories/TensorFlow_wormUp_gym/MNIST_TF_01/tmp\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "tensorboard --logdir=/home/damian/GitRepositories/TensorFlow_wormUp_gym/MNIST_TF_01/tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use the following command to start tensorboard\n",
+    "tensorboard --logdir=/home/damian/GitRepositories/TensorFlow_wormUp_gym/MNIST_TF_01/tmp"
+   ]
   }
  ],
  "metadata": {
